// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedOptions snapshot with all values 1`] = `
<form
  className="pf-c-form pf-m-horizontal"
  noValidate={true}
  onSubmit={[Function]}
>
  <div>
    <div>
      Container Image
    </div>
    <div
      data-testid="container-image"
    >
      testimage
    </div>
    <button
      onClick={[Function]}
    >
      Container Image Change
    </button>
  </div>
  <div>
    <div>
      Temporary Storage
    </div>
    <div
      data-testid="temporary-storage"
    >
      true
    </div>
    <button
      onClick={[Function]}
    >
      Temporary Storage Change
    </button>
  </div>
  <div>
    <div>
      Create New If Existing
    </div>
    <div
      data-testid="create-new-if-existing"
    >
      true
    </div>
    <button
      onClick={[Function]}
    >
      Create New If Existing Change
    </button>
  </div>
  <div>
    <div>
      Memory Limit
    </div>
    <div
      data-testid="memory-limit"
    >
      4718592
    </div>
    <button
      onClick={[Function]}
    >
      Memory Limit Change
    </button>
  </div>
  <div>
    <div>
      Cpu Limit
    </div>
    <div
      data-testid="cpu-limit"
    >
      2
    </div>
    <button
      onClick={[Function]}
    >
      Cpu Limit Change
    </button>
  </div>
</form>
`;

exports[`AdvancedOptions snapshot with default values 1`] = `
<form
  className="pf-c-form pf-m-horizontal"
  noValidate={true}
  onSubmit={[Function]}
>
  <div>
    <div>
      Container Image
    </div>
    <div
      data-testid="container-image"
    />
    <button
      onClick={[Function]}
    >
      Container Image Change
    </button>
  </div>
  <div>
    <div>
      Temporary Storage
    </div>
    <div
      data-testid="temporary-storage"
    >
      undefined
    </div>
    <button
      onClick={[Function]}
    >
      Temporary Storage Change
    </button>
  </div>
  <div>
    <div>
      Create New If Existing
    </div>
    <div
      data-testid="create-new-if-existing"
    >
      undefined
    </div>
    <button
      onClick={[Function]}
    >
      Create New If Existing Change
    </button>
  </div>
  <div>
    <div>
      Memory Limit
    </div>
    <div
      data-testid="memory-limit"
    >
      0
    </div>
    <button
      onClick={[Function]}
    >
      Memory Limit Change
    </button>
  </div>
  <div>
    <div>
      Cpu Limit
    </div>
    <div
      data-testid="cpu-limit"
    >
      0
    </div>
    <button
      onClick={[Function]}
    >
      Cpu Limit Change
    </button>
  </div>
</form>
`;
